--- a/src/components/Random.css
+++ b/src/components/Random.css
@@ -1,13 +1,15 @@
 .random-gif-container {
   width: 50%;
-  height: 450px;
+
   background-color: green;
-  /* margin-top: 200px; */
+
   border-radius: 6px;
   border: 2px solid blue;
   display: flex;
   flex-direction: column;
+  /* margin-top: 30px 0; */
   align-items: center;
+  padding: 20px;
 }
 
 .random-gif-container button {
@@ -15,4 +17,6 @@
   background-color: #ffff97;
   border-radius: 5px;
   padding: 8px 0;
+  margin-top: 20px;
+  cursor: pointer;
 }
